Centered text in all tables, create mice revised, unsexed mice now an option - no color

--- a/MouseMaintenance/public/css/styles.css
+++ b/MouseMaintenance/public/css/styles.css
@@ -25,6 +25,10 @@ body {
     height: 100%;
 }
 
+table, th{
+    text-align: center;
+}
+
 /*footer{*/
     /*background-color: #373737;*/
     /*color: #8da58b;*/
