--- a/MouseMaintenance/public/css/styles.css
+++ b/MouseMaintenance/public/css/styles.css
@@ -44,6 +44,20 @@ table, th{
     }
 }
 
+button{
+    border-radius: 50%;
+}
+
+button:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#submit_euthanize{
+    margin-left: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 
 .fa-btn {
     margin-right: 6px;
