Worked on euth button flow

--- a/MouseMaintenance/public/css/styles.css
+++ b/MouseMaintenance/public/css/styles.css
@@ -63,6 +63,10 @@ table, th{
     text-align: center;
 }
 
+#euthOptions{
+    padding-top: 60px;
+}
+
 footer{
     background-color: #373737;
     color: #ffffff;
