Centered Logo, updated migration to include alive field

--- a/MouseMaintenance/public/css/styles.css
+++ b/MouseMaintenance/public/css/styles.css
@@ -214,6 +214,10 @@ table th, td{
     /*background-color: #8e8e8e !important;*/
 }
 
+#login{
+    padding-top: 15%;
+}
+
 /* ==========================================================================
    Media Queries for Responsive Design.
    These styles override the primary styles.
