migration and db changed to allow many2many mice-treatment. updated seeder. cages now has delete functionality. started working on create surgery

--- a/MouseMaintenance/public/css/styles.css
+++ b/MouseMaintenance/public/css/styles.css
@@ -118,6 +118,10 @@ button:hover{
     color: #b0e0e6;
 }
 
+#create_cage{
+    padding-bottom: 5px;
+}
+
 /*.navbar-brand>img{*/
     /*margin-top: -10px;*/
     /*height: 45px;*/
